--- a/index.html
+++ b/index.html
@@ -11,22 +11,71 @@
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
     }
 
+    /* FUNDO GERAL – CINZA PRATA BAÇO */
     body {
       margin: 0;
-      background: #0f172a;
-      color: #e5e7eb;
+      min-height: 100vh;
       display: flex;
       justify-content: center;
+      background-color: #C0C0C0; /* cinza prata baço */
+      color: #e5e7eb;
     }
 
     .app {
       width: 100%;
       max-width: 900px;
       padding: 16px;
+      margin: 16px;
+      background: #020617;
+      border-radius: 20px;
+      box-shadow: 0 18px 40px rgba(0, 0, 0, 0.45);
+      box-sizing: border-box;
+    }
+
+    header {
+      text-align: center;
+      margin-bottom: 16px;
+    }
+
+    #appLogo {
+      max-width: 220px;
+      height: auto;
+      display: block;
+      margin: 0 auto 8px auto;
     }
 
     h1 {
-      text-align: center;
+      margin: 0;
+      font-size: 1.5rem;
+    }
+
+    .subtitle {
+      font-size: 0.85rem;
+      color: #9ca3af;
+    }
+
+    .tabs {
+      display: flex;
+      gap: 8px;
+      margin-bottom: 12px;
+    }
+
+    .tab-btn {
+      flex: 1;
+      padding: 8px 0;
+      border-radius: 999px;
+      border: 1px solid #1f2937;
+      background: #020617;
+      color: #e5e7eb;
+      cursor: pointer;
+      font-size: 0.9rem;
+    }
+
+    .tab-btn.active {
+      background: #22c55e;
+      border-color: #22c55e;
+      color: #022c12;
+      font-weight: 600;
     }
 
     .card {
@@ -34,6 +83,7 @@
       border-radius: 14px;
       padding: 12px;
       margin-bottom: 16px;
+      border: 1px solid #1f2937;
     }
 
     .form-row {
@@ -43,30 +93,67 @@
       margin-bottom: 8px;
     }
 
+    .field {
+      flex: 1;
+      min-width: 140px;
+      display: flex;
+      flex-direction: column;
+      gap: 4px;
+    }
+
     label {
       font-size: 0.8rem;
       color: #9ca3af;
     }
 
-    input, select, button {
+    input, select, textarea, button {
       padding: 8px;
       border-radius: 10px;
       background: #020617;
       color: #e5e7eb;
       border: 1px solid #1e293b;
+      font-family: inherit;
+      font-size: 0.9rem;
+      box-sizing: border-box;
     }
 
-    input:focus, select:focus {
+    input:focus, select:focus, textarea:focus {
       outline: none;
       border-color: #22c55e;
+    }
+
+    textarea {
+      resize: vertical;
+      min-height: 60px;
+      max-height: 140px;
     }
 
     .btn-primary {
       background: #22c55e;
       border-color: #22c55e;
       color: #022c12;
-      font-weight: bold;
+      font-weight: 600;
       cursor: pointer;
+    }
+
+    .btn-danger {
+      background: #7f1d1d;
+      border-color: #991b1b;
+      color: #fee2e2;
+      font-weight: 500;
+      cursor: pointer;
+    }
+
+    .btn-row {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
+      margin-top: 8px;
+    }
+
+    .btn-row > button {
+      flex: 1;
+      min-width: 120px;
     }
 
     table {
@@ -79,78 +166,159 @@
       padding: 6px;
       text-align: center;
       border-bottom: 1px solid #1e293b;
+      white-space: nowrap;
+      vertical-align: top;
+    }
+
+    th {
+      color: #9ca3af;
     }
 
     .scroll {
-      max-height: 60vh;
+      max-height: 260px;
       overflow: auto;
-      border: 1px solid #1e293b;
       border-radius: 10px;
+      border: 1px solid #1e293b;
     }
 
-    .exercise-option {
-      display: flex;
-      align-items: center;
-      gap: 8px;
-      padding: 4px 0;
+    .section {
+      display: none;
     }
 
-    .exercise-option img {
-      width: 26px;
-      height: 26px;
-      object-fit: contain;
-    }
-
-    #appLogo {
+    .section.active {
       display: block;
-      margin: 0 auto 16px auto;
-      width: 140px;
-      height: auto;
+    }
+
+    .hint {
+      font-size: 0.75rem;
+      color: #9ca3af;
+      margin-top: 4px;
+    }
+
+    @media (max-width: 600px) {
+      .app {
+        margin: 8px;
+        padding: 12px;
+      }
+
+      h1 {
+        font-size: 1.3rem;
+      }
+
+      /* em ecrãs pequenos escondemos colunas > 80% para não ficar apertado */
+      th:nth-child(n+7),
+      td:nth-child(n+7) {
+        display: none;
+      }
     }
   </style>
 </head>
 
 <body>
 <div class="app">
+  <header>
+    <img id="appLogo" src="imagens/crossmoita_logo.png" alt="Cross Moita Health & Fitness" />
+    <h1>Cross Moita – 1RM & Diário</h1>
+    <div class="subtitle">1RM & Diário de Treinos – uso pessoal</div>
+  </header>
 
-  <!-- LOGO -->
-  <img id="appLogo" src="imagens/crossmoita_logo.png" alt="Cross Moita Logo" />
-
-  <h1>1RM Tracker & Diário</h1>
-
-  <div class="card">
-    <div class="form-row">
-      <div style="flex:1">
-        <label>Exercício</label>
-        <select id="exercise"></select>
-      </div>
-
-      <div style="flex:1">
-        <label>1RM (kg)</label>
-        <input id="oneRm" type="number" step="0.5" />
-      </div>
-    </div>
-
-    <button class="btn-primary" id="addBtn">Guardar / Atualizar</button>
+  <div class="tabs">
+    <button class="tab-btn active" data-target="sec-1rm">1RM</button>
+    <button class="tab-btn" data-target="sec-diario">Diário</button>
   </div>
 
-  <div class="card">
-    <div class="scroll">
-      <table>
-        <thead>
-          <tr>
-            <th>Exercício</th><th>1RM</th><th>50%</th><th>60%</th><th>70%</th>
-            <th>75%</th><th>80%</th><th>85%</th><th>90%</th><th>95%</th>
-          </tr>
-        </thead>
-        <tbody id="tableBody"></tbody>
-      </table>
+  <!-- SECÇÃO 1RM -->
+  <section id="sec-1rm" class="section active">
+    <div class="card">
+      <div class="form-row">
+        <div class="field">
+          <label for="exercise">Exercício</label>
+          <select id="exercise"></select>
+        </div>
+        <div class="field">
+          <label for="oneRm">1RM (kg)</label>
+          <input id="oneRm" type="number" step="0.5" placeholder="Ex.: 150" />
+        </div>
+      </div>
+      <button class="btn-primary" id="addBtn">Guardar / Atualizar</button>
+      <div class="hint">Os valores ficam guardados neste dispositivo.</div>
     </div>
-  </div>
 
+    <div class="card">
+      <div class="scroll">
+        <table>
+          <thead>
+            <tr>
+              <th>Exercício</th><th>1RM</th><th>50%</th><th>60%</th><th>70%</th>
+              <th>75%</th><th>80%</th><th>85%</th><th>90%</th><th>95%</th>
+            </tr>
+          </thead>
+          <tbody id="tableBody"></tbody>
+        </table>
+      </div>
+      <div class="hint">Dica: arrasta uma linha para a esquerda para apagar esse exercício.</div>
+    </div>
+  </section>
+
+  <!-- SECÇÃO DIÁRIO -->
+  <section id="sec-diario" class="section">
+    <div class="card">
+      <div class="form-row">
+        <div class="field">
+          <label for="date">Data</label>
+          <input id="date" type="date" />
+        </div>
+        <div class="field">
+          <label for="wod">WOD / Treino</label>
+          <input id="wod" type="text" placeholder="Ex.: Cindy, EMOM 10’..." />
+        </div>
+      </div>
+
+      <div class="form-row">
+        <div class="field">
+          <label for="tipo">Tipo</label>
+          <input id="tipo" type="text" placeholder="Força, Metcon, Skill..." />
+        </div>
+        <div class="field">
+          <label for="resultado">Resultado</label>
+          <input id="resultado" type="text" placeholder="Ex.: 10 rondas, 120 kg, 12:35..." />
+        </div>
+      </div>
+
+      <div class="field">
+        <label for="notas">Notas</label>
+        <textarea id="notas" placeholder="Sensações, ajustes, técnica, sono, etc."></textarea>
+      </div>
+
+      <div class="btn-row">
+        <button class="btn-primary" id="saveDiary">Guardar registo</button>
+        <button class="btn-danger" id="clearDiary">Apagar todos</button>
+      </div>
+
+      <div class="hint">O diário também fica guardado apenas neste dispositivo.</div>
+    </div>
+
+    <div class="card">
+      <div class="scroll">
+        <table>
+          <thead>
+            <tr>
+              <th>Data</th>
+              <th>WOD</th>
+              <th>Tipo</th>
+              <th>Resultado</th>
+              <th>Notas</th>
+            </tr>
+          </thead>
+          <tbody id="diaryBody"></tbody>
+        </table>
+      </div>
+    </div>
+  </section>
 </div>
 
 <script>
+// ================= 1RM =================
 const MOVES = [
   "Chest Press",
   "Back Squat","Front Squat","Overhead Squat","Deadlift","Sumo Deadlift",
@@ -165,14 +333,14 @@ const MOVES = [
 ];
 
 const PERCENTS = [0.5,0.6,0.7,0.75,0.8,0.85,0.9,0.95];
-const STORAGE = "crossfit_1rm";
-let data = JSON.parse(localStorage.getItem(STORAGE) || "{}");
+const STORAGE_RM = "crossfit_1rm";
+let dataRm = JSON.parse(localStorage.getItem(STORAGE_RM) || "{}");
 
 const sel = document.getElementById("exercise");
 const rm = document.getElementById("oneRm");
 const bodyTable = document.getElementById("tableBody");
 
-function defaultSelect(){
+function initSelect() {
   sel.innerHTML = "";
   MOVES.forEach(m => {
     const opt = document.createElement("option");
@@ -182,31 +350,151 @@ function defaultSelect(){
   });
 }
 
-document.getElementById("addBtn").onclick = () => {
-  const ex = sel.value;
-  const val = parseFloat(rm.value);
-  if(!ex || !val) return;
-  data[ex] = val;
-  localStorage.setItem(STORAGE, JSON.stringify(data));
-  render();
-  rm.value = "";
-};
+function formatKg(v) {
+  return v.toFixed(1).replace(".", ",") + " kg";
+}
 
-function format(v){ return v.toFixed(1).replace('.',',') + " kg"; }
-
-function render(){
+/* desenha a tabela e prepara swipe para apagar */
+function renderRm() {
   bodyTable.innerHTML = "";
-  Object.keys(data).sort().forEach(name => {
+  Object.keys(dataRm).sort().forEach(name => {
     const tr = document.createElement("tr");
+    tr.dataset.exName = name;       // guardar nome do exercício na linha
+    tr.classList.add("rm-row");     // marca como linha 1RM
+
     tr.innerHTML = `<td>${name}</td>
-      <td>${format(data[name])}</td>
-      ${PERCENTS.map(p => `<td>${format(data[name]*p)}</td>`).join("")}`;
+      <td>${formatKg(dataRm[name])}</td>
+      ${PERCENTS.map(p => `<td>${formatKg(dataRm[name] * p)}</td>`).join("")}`;
+
     bodyTable.appendChild(tr);
+  });
+
+  setupSwipeToDelete();
+}
+
+/* swipe para a ESQUERDA numa linha apaga esse exercício */
+function setupSwipeToDelete() {
+  const rows = document.querySelectorAll("tr.rm-row");
+
+  rows.forEach(row => {
+    let startX = 0;
+    let startY = 0;
+
+    row.addEventListener("touchstart", e => {
+      const touch = e.touches[0];
+      startX = touch.clientX;
+      startY = touch.clientY;
+    }, { passive: true });
+
+    row.addEventListener("touchend", e => {
+      const touch = e.changedTouches[0];
+      const endX = touch.clientX;
+      const endY = touch.clientY;
+
+      const dx = endX - startX;
+      const dy = endY - startY;
+
+      // movimento claro para a ESQUERDA, mais horizontal que vertical
+      if (dx < -50 && Math.abs(dx) > Math.abs(dy)) {
+        const exName = row.dataset.exName;
+        if (!exName) return;
+
+        const ok = confirm(`Apagar o exercício "${exName}" da tabela?`);
+        if (!ok) return;
+
+        delete dataRm[exName];
+        localStorage.setItem(STORAGE_RM, JSON.stringify(dataRm));
+        renderRm();
+      }
+    }, { passive: true });
   });
 }
 
-defaultSelect();
-render();
+document.getElementById("addBtn").onclick = () => {
+  const ex = sel.value;
+  const val = parseFloat(rm.value);
+  if (!ex || !val || val <= 0) return;
+  dataRm[ex] = val;
+  localStorage.setItem(STORAGE_RM, JSON.stringify(dataRm));
+  renderRm();
+  rm.value = "";
+};
+
+// ================= DIÁRIO =================
+const STORAGE_DIARY = "crossfit_diary";
+let diary = JSON.parse(localStorage.getItem(STORAGE_DIARY) || "[]");
+
+const dateEl = document.getElementById("date");
+const wodEl = document.getElementById("wod");
+const tipoEl = document.getElementById("tipo");
+const resEl = document.getElementById("resultado");
+const notasEl = document.getElementById("notas");
+const diaryBody = document.getElementById("diaryBody");
+
+document.getElementById("saveDiary").onclick = () => {
+  const entry = {
+    date: dateEl.value || "",
+    wod: (wodEl.value || "").trim(),
+    tipo: (tipoEl.value || "").trim(),
+    resultado: (resEl.value || "").trim(),
+    notas: (notasEl.value || "").trim()
+  };
+  if (!entry.wod && !entry.resultado && !entry.notas) return;
+
+  diary.unshift(entry);
+  localStorage.setItem(STORAGE_DIARY, JSON.stringify(diary));
+  renderDiary();
+
+  wodEl.value = "";
+  tipoEl.value = "";
+  resEl.value = "";
+  notasEl.value = "";
+};
+
+document.getElementById("clearDiary").onclick = () => {
+  if (!diary.length) return;
+  if (!confirm("Apagar todos os registos do diário?")) return;
+  diary = [];
+  localStorage.setItem(STORAGE_DIARY, "[]");
+  renderDiary();
+};
+
+function renderDiary() {
+  diaryBody.innerHTML = "";
+  diary.forEach(e => {
+    const tr = document.createElement("tr");
+    tr.innerHTML = `
+      <td>${e.date || ""}</td>
+      <td>${e.wod || ""}</td>
+      <td>${e.tipo || ""}</td>
+      <td>${e.resultado || ""}</td>
+      <td style="text-align:left; white-space:normal;">${e.notas || ""}</td>
+    `;
+    diaryBody.appendChild(tr);
+  });
+}
+
+// ================= TABS =================
+document.querySelectorAll(".tab-btn").forEach(btn => {
+  btn.addEventListener("click", () => {
+    document.querySelectorAll(".tab-btn").forEach(b => b.classList.remove("active"));
+    document.querySelectorAll(".section").forEach(s => s.classList.remove("active"));
+
+    btn.classList.add("active");
+    const target = btn.getAttribute("data-target");
+    document.getElementById(target).classList.add("active");
+  });
+});
+
+// INIT
+initSelect();
+renderRm();
+renderDiary();
+
+if (!dateEl.value) {
+  const today = new Date().toISOString().slice(0, 10);
+  dateEl.value = today;
+}
 </script>
 
 </body>
