--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cross Moita – 1RM & Diário</title>
-  <meta name="theme-color" content="#020617" />
+
+  <!-- cor da barra do telemóvel (agora cinzento escuro/prata baço) -->
+  <meta name="theme-color" content="#111827" />
   <link rel="manifest" href="manifest.json" />
 
   <style>
@@ -12,13 +14,13 @@
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
     }
 
-    /* FUNDO GERAL ESCURO (igual ao que já tinhas) */
+    /* FUNDO GERAL – CINZENTO PRATA BAÇO */
     body {
       margin: 0;
       min-height: 100vh;
       display: flex;
       justify-content: center;
-      background-color: #020617;
+      background-color: #111827; /* cinza/prata escuro */
       color: #e5e7eb;
     }
 
@@ -27,7 +29,7 @@
       max-width: 900px;
       padding: 16px;
       margin: 16px;
-      background: #020617;
+      background: #111827;
       border-radius: 20px;
       box-sizing: border-box;
     }
@@ -57,7 +59,7 @@
     .tabs {
       display: flex;
       gap: 8px;
-      margin-bottom: 12px;
+      margin: 12px 0;
     }
 
     .tab-btn {
@@ -204,11 +206,7 @@
       h1 {
         font-size: 1.3rem;
       }
-
-      th:nth-child(n+7),
-      td:nth-child(n+7) {
-        display: none;
-      }
+      /* já NÃO escondemos colunas 80/85/90/95 – ficam sempre acessíveis com scroll horizontal */
     }
   </style>
 </head>
@@ -255,7 +253,7 @@
           <tbody id="tableBody"></tbody>
         </table>
       </div>
-      <div class="hint">Toca numa linha ou arrasta para a esquerda para apagar esse exercício.</div>
+      <!-- A frase "Toca numa linha..." foi removida para não ocupar espaço -->
     </div>
   </section>
 
