--- a/index.html
+++ b/index.html
@@ -5,32 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cross Moita – 1RM & Diário</title>
 
-  <!-- cor da barra do telemóvel (agora cinzento escuro/prata baço) -->
-  <meta name="theme-color" content="#111827" />
-  <link rel="manifest" href="manifest.json" />
+  <!-- Cor da barra de topo nos telemóveis -->
+  <meta name="theme-color" content="#f2f2f2" />
 
   <style>
     :root {
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      font-family: system-ui, sans-serif;
+      color-scheme: light;
     }
 
-    /* FUNDO GERAL – CINZENTO PRATA BAÇO */
+    /* === FUNDO CLARO (CINZA SUAVE) === */
     body {
       margin: 0;
-      min-height: 100vh;
+      background: #f2f2f2;   /* cinza muito claro */
+      color: #111111;        /* texto escuro */
       display: flex;
       justify-content: center;
-      background-color: #111827; /* cinza/prata escuro */
-      color: #e5e7eb;
+      min-height: 100vh;
     }
 
     .app {
       width: 100%;
       max-width: 900px;
       padding: 16px;
-      margin: 16px;
-      background: #111827;
-      border-radius: 20px;
       box-sizing: border-box;
     }
 
@@ -43,32 +40,34 @@
       max-width: 220px;
       height: auto;
       display: block;
-      margin: 0 auto 8px auto;
+      margin: 0 auto 6px auto;
     }
 
     h1 {
       margin: 0;
-      font-size: 1.5rem;
+      font-size: 1.6rem;
+      color: #111;
     }
 
     .subtitle {
       font-size: 0.85rem;
-      color: #9ca3af;
+      color: #555;
     }
 
+    /* === TABS === */
     .tabs {
       display: flex;
       gap: 8px;
-      margin: 12px 0;
+      margin: 14px 0;
     }
 
     .tab-btn {
       flex: 1;
-      padding: 8px 0;
+      padding: 10px 0;
       border-radius: 999px;
-      border: 1px solid #1f2937;
-      background: #020617;
-      color: #e5e7eb;
+      border: 1px solid #cccccc;
+      background: #e5e5e5;
+      color: #222;
       cursor: pointer;
       font-size: 0.9rem;
     }
@@ -76,22 +75,24 @@
     .tab-btn.active {
       background: #22c55e;
       border-color: #22c55e;
-      color: #022c12;
+      color: #ffffff;
       font-weight: 600;
     }
 
+    /* === CARDS === */
     .card {
-      background: #020617;
+      background: #ffffff;
       border-radius: 14px;
-      padding: 12px;
+      padding: 14px;
       margin-bottom: 16px;
-      border: 1px solid #1f2937;
+      border: 1px solid #e0e0e0;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.04);
     }
 
     .form-row {
       display: flex;
       flex-wrap: wrap;
-      gap: 8px;
+      gap: 10px;
       margin-bottom: 8px;
     }
 
@@ -105,23 +106,24 @@
 
     label {
       font-size: 0.8rem;
-      color: #9ca3af;
+      color: #444;
     }
 
     input, select, textarea, button {
-      padding: 8px;
+      padding: 10px;
       border-radius: 10px;
-      background: #020617;
-      color: #e5e7eb;
-      border: 1px solid #1e293b;
-      font-family: inherit;
+      background: #ffffff;
+      color: #111;
+      border: 1px solid #cccccc;
       font-size: 0.9rem;
       box-sizing: border-box;
+      font-family: inherit;
     }
 
     input:focus, select:focus, textarea:focus {
       outline: none;
       border-color: #22c55e;
+      box-shadow: 0 0 0 1px rgba(34,197,94,0.2);
     }
 
     textarea {
@@ -133,90 +135,71 @@
     .btn-primary {
       background: #22c55e;
       border-color: #22c55e;
-      color: #022c12;
+      color: #ffffff;
       font-weight: 600;
       cursor: pointer;
     }
 
     .btn-danger {
-      background: #7f1d1d;
+      background: #b91c1c;
       border-color: #991b1b;
-      color: #fee2e2;
-      font-weight: 500;
+      color: #ffffff;
+      font-weight: 600;
       cursor: pointer;
-    }
-
-    .btn-row {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 8px;
-      margin-top: 8px;
-    }
-
-    .btn-row > button {
-      flex: 1;
-      min-width: 120px;
+      margin-left: 8px;
     }
 
     table {
       width: 100%;
       border-collapse: collapse;
-      font-size: 0.8rem;
+      font-size: 0.85rem;
+      color: #111;
     }
 
     th, td {
       padding: 6px;
       text-align: center;
-      border-bottom: 1px solid #1e293b;
+      border-bottom: 1px solid #dddddd;
       white-space: nowrap;
-      vertical-align: top;
     }
 
     th {
-      color: #9ca3af;
+      background: #f9f9f9;
+      color: #333;
+      position: sticky;
+      top: 0;
+      z-index: 1;
     }
 
     .scroll {
       max-height: 260px;
       overflow: auto;
       border-radius: 10px;
-      border: 1px solid #1e293b;
+      border: 1px solid #e5e5e5;
     }
 
-    .section {
-      display: none;
-    }
-
-    .section.active {
-      display: block;
-    }
-
-    .hint {
-      font-size: 0.75rem;
-      color: #9ca3af;
-      margin-top: 4px;
-    }
+    .section { display: none; }
+    .section.active { display: block; }
 
     @media (max-width: 600px) {
       .app {
-        margin: 8px;
         padding: 12px;
       }
 
       h1 {
-        font-size: 1.3rem;
+        font-size: 1.4rem;
       }
-      /* já NÃO escondemos colunas 80/85/90/95 – ficam sempre acessíveis com scroll horizontal */
     }
   </style>
 </head>
 
 <body>
 <div class="app">
+
   <header>
-    <img id="appLogo" src="imagens/crossmoita_logo.png" alt="Cross Moita Health & Fitness" />
+    <img id="appLogo" src="imagens/crossmoita_logo.png" alt="Cross Moita Logo">
     <h1>Cross Moita – 1RM & Diário</h1>
-    <div class="subtitle">1RM & Diário de Treinos – uso pessoal</div>
+    <div class="subtitle">Registo pessoal de treinos</div>
   </header>
 
   <div class="tabs">
@@ -224,21 +207,23 @@
     <button class="tab-btn" data-target="sec-diario">Diário</button>
   </div>
 
-  <!-- SECÇÃO 1RM -->
+  <!-- 1RM -->
   <section id="sec-1rm" class="section active">
+
     <div class="card">
       <div class="form-row">
         <div class="field">
-          <label for="exercise">Exercício</label>
+          <label>Exercício</label>
           <select id="exercise"></select>
         </div>
+
         <div class="field">
-          <label for="oneRm">1RM (kg)</label>
-          <input id="oneRm" type="number" step="0.5" placeholder="Ex.: 150" />
+          <label>1RM (kg)</label>
+          <input id="oneRm" type="number" step="0.5" />
         </div>
       </div>
+
       <button class="btn-primary" id="addBtn">Guardar / Atualizar</button>
-      <div class="hint">Os valores ficam guardados neste dispositivo.</div>
     </div>
 
     <div class="card">
@@ -246,53 +231,63 @@
         <table>
           <thead>
             <tr>
-              <th>Exercício</th><th>1RM</th><th>50%</th><th>60%</th><th>70%</th>
-              <th>75%</th><th>80%</th><th>85%</th><th>90%</th><th>95%</th>
+              <th>Exercício</th>
+              <th>1RM</th>
+              <th>50%</th>
+              <th>60%</th>
+              <th>70%</th>
+              <th>75%</th>
+              <th>80%</th>
+              <th>85%</th>
+              <th>90%</th>
+              <th>95%</th>
             </tr>
           </thead>
           <tbody id="tableBody"></tbody>
         </table>
       </div>
-      <!-- A frase "Toca numa linha..." foi removida para não ocupar espaço -->
     </div>
+
   </section>
 
-  <!-- SECÇÃO DIÁRIO -->
+  <!-- DIÁRIO -->
   <section id="sec-diario" class="section">
+
     <div class="card">
       <div class="form-row">
         <div class="field">
-          <label for="date">Data</label>
-          <input id="date" type="date" />
+          <label>Data</label>
+          <input id="date" type="date">
         </div>
+
         <div class="field">
-          <label for="wod">WOD / Treino</label>
-          <input id="wod" type="text" placeholder="Ex.: Cindy, EMOM 10’..." />
+          <label>WOD</label>
+          <input id="wod" type="text">
         </div>
       </div>
 
       <div class="form-row">
         <div class="field">
-          <label for="tipo">Tipo</label>
-          <input id="tipo" type="text" placeholder="Força, Metcon, Skill..." />
+          <label>Tipo</label>
+          <input id="tipo" type="text">
         </div>
+
         <div class="field">
-          <label for="resultado">Resultado</label>
-          <input id="resultado" type="text" placeholder="Ex.: 10 rondas, 120 kg, 12:35..." />
+          <label>Resultado</label>
+          <input id="resultado" type="text">
         </div>
       </div>
 
       <div class="field">
-        <label for="notas">Notas</label>
-        <textarea id="notas" placeholder="Sensações, ajustes, técnica, sono, etc."></textarea>
+        <label>Notas</label>
+        <textarea id="notas"></textarea>
       </div>
 
-      <div class="btn-row">
-        <button class="btn-primary" id="saveDiary">Guardar registo</button>
-        <button class="btn-danger" id="clearDiary">Apagar todos</button>
+      <div style="margin-top:8px;">
+        <button class="btn-primary" id="saveDiary">Guardar</button>
+        <button class="btn-danger" id="clearDiary">Apagar tudo</button>
       </div>
 
-      <div class="hint">O diário também fica guardado apenas neste dispositivo.</div>
     </div>
 
     <div class="card">
@@ -311,14 +306,15 @@
         </table>
       </div>
     </div>
+
   </section>
+
 </div>
 
 <script>
-// ================= 1RM =================
+/* ===== 1RM ===== */
 const MOVES = [
-  "Chest Press",
-  "Back Squat","Front Squat","Overhead Squat","Deadlift","Sumo Deadlift",
+  "Chest Press","Back Squat","Front Squat","Overhead Squat","Deadlift","Sumo Deadlift",
   "Romanian Deadlift (RDL)","Power Clean","Squat Clean","Clean & Jerk",
   "Power Snatch","Squat Snatch","Push Press","Push Jerk","Split Jerk",
   "Strict Press","Thruster","Barbell Row","Bent Over Row","Good Morning",
@@ -329,7 +325,7 @@ const MOVES = [
   "Goblet Squat","Kettlebell Lunges"
 ];
 
-const PERCENTS = [0.5,0.6,0.7,0.75,0.8,0.85,0.9,0.95];
+const PERC = [0.5,0.6,0.7,0.75,0.8,0.85,0.9,0.95];
 const STORAGE_RM = "crossfit_1rm";
 let dataRm = JSON.parse(localStorage.getItem(STORAGE_RM) || "{}");
 
@@ -337,93 +333,40 @@ const sel = document.getElementById("exercise");
 const rm = document.getElementById("oneRm");
 const bodyTable = document.getElementById("tableBody");
 
-function initSelect() {
-  sel.innerHTML = "";
-  MOVES.forEach(m => {
-    const opt = document.createElement("option");
-    opt.value = m;
-    opt.textContent = m;
-    sel.appendChild(opt);
-  });
-}
+/* preencher select */
+sel.innerHTML = MOVES.map(m => `<option>${m}</option>`).join("");
 
-function formatKg(v) {
-  return v.toFixed(1).replace(".", ",") + " kg";
-}
-
-// função comum para apagar um exercício
-function deleteExercise(exName) {
-  if (!exName) return;
-  const ok = confirm(`Apagar o exercício "${exName}" da tabela?`);
-  if (!ok) return;
-  delete dataRm[exName];
-  localStorage.setItem(STORAGE_RM, JSON.stringify(dataRm));
-  renderRm();
-}
-
-/* desenha a tabela e prepara interações */
 function renderRm() {
-  bodyTable.innerHTML = "";
-  Object.keys(dataRm).sort().forEach(name => {
-    const tr = document.createElement("tr");
-    tr.dataset.exName = name;
-    tr.classList.add("rm-row");
-    tr.innerHTML = `<td>${name}</td>
-      <td>${formatKg(dataRm[name])}</td>
-      ${PERCENTS.map(p => `<td>${formatKg(dataRm[name] * p)}</td>`).join("")}`;
-    bodyTable.appendChild(tr);
-  });
-  setupRowInteractions();
+  bodyTable.innerHTML = Object.keys(dataRm).sort().map(name => `
+    <tr onclick="deleteEx('${name.replace(/'/g, "\\'")}')">
+      <td>${name}</td>
+      <td>${dataRm[name].toFixed(1)} kg</td>
+      ${PERC.map(p => `<td>${(dataRm[name]*p).toFixed(1)} kg</td>`).join("")}
+    </tr>
+  `).join("");
 }
 
-/* clique + swipe para apagar */
-function setupRowInteractions() {
-  const rows = document.querySelectorAll("tr.rm-row");
-
-  rows.forEach(row => {
-    let startX = 0;
-    let startY = 0;
-
-    // toque simples: clicar apaga (com confirmação)
-    row.addEventListener("click", () => {
-      const exName = row.dataset.exName;
-      deleteExercise(exName);
-    });
-
-    // swipe para a esquerda
-    row.addEventListener("touchstart", e => {
-      const touch = e.touches[0];
-      startX = touch.clientX;
-      startY = touch.clientY;
-    }, { passive: true });
-
-    row.addEventListener("touchend", e => {
-      const touch = e.changedTouches[0];
-      const endX = touch.clientX;
-      const endY = touch.clientY;
-
-      const dx = endX - startX;
-      const dy = endY - startY;
-
-      if (dx < -50 && Math.abs(dx) > Math.abs(dy)) {
-        const exName = row.dataset.exName;
-        deleteExercise(exName);
-      }
-    }, { passive: true });
-  });
+function deleteEx(name) {
+  if (confirm(\`Apagar "\${name}"?\`)) {
+    delete dataRm[name];
+    localStorage.setItem(STORAGE_RM, JSON.stringify(dataRm));
+    renderRm();
+  }
 }
 
 document.getElementById("addBtn").onclick = () => {
   const ex = sel.value;
   const val = parseFloat(rm.value);
-  if (!ex || !val || val <= 0) return;
+  if (!ex || !val) return;
   dataRm[ex] = val;
   localStorage.setItem(STORAGE_RM, JSON.stringify(dataRm));
-  renderRm();
   rm.value = "";
+  renderRm();
 };
 
-// ================= DIÁRIO =================
+renderRm();
+
+/* ===== DIÁRIO ===== */
 const STORAGE_DIARY = "crossfit_diary";
 let diary = JSON.parse(localStorage.getItem(STORAGE_DIARY) || "[]");
 
@@ -434,70 +377,51 @@ const resEl = document.getElementById("resultado");
 const notasEl = document.getElementById("notas");
 const diaryBody = document.getElementById("diaryBody");
 
-document.getElementById("saveDiary").onclick = () => {
-  const entry = {
-    date: dateEl.value || "",
-    wod: (wodEl.value || "").trim(),
-    tipo: (tipoEl.value || "").trim(),
-    resultado: (resEl.value || "").trim(),
-    notas: (notasEl.value || "").trim()
-  };
-  if (!entry.wod && !entry.resultado && !entry.notas) return;
+function renderDiary() {
+  diaryBody.innerHTML = diary.map(d => `
+    <tr>
+      <td>${d.date||""}</td>
+      <td>${d.wod||""}</td>
+      <td>${d.tipo||""}</td>
+      <td>${d.resultado||""}</td>
+      <td>${d.notas||""}</td>
+    </tr>
+  `).join("");
+}
 
-  diary.unshift(entry);
+document.getElementById("saveDiary").onclick = () => {
+  diary.unshift({
+    date: dateEl.value,
+    wod: wodEl.value,
+    tipo: tipoEl.value,
+    resultado: resEl.value,
+    notas: notasEl.value
+  });
   localStorage.setItem(STORAGE_DIARY, JSON.stringify(diary));
   renderDiary();
-
-  wodEl.value = "";
-  tipoEl.value = "";
-  resEl.value = "";
-  notasEl.value = "";
 };
 
 document.getElementById("clearDiary").onclick = () => {
-  if (!diary.length) return;
-  if (!confirm("Apagar todos os registos do diário?")) return;
-  diary = [];
-  localStorage.setItem(STORAGE_DIARY, "[]");
-  renderDiary();
+  if (confirm("Apagar todo o diário?")) {
+    diary = [];
+    localStorage.setItem(STORAGE_DIARY, "[]");
+    renderDiary();
+  }
 };
 
-function renderDiary() {
-  diaryBody.innerHTML = "";
-  diary.forEach(e => {
-    const tr = document.createElement("tr");
-    tr.innerHTML = `
-      <td>${e.date || ""}</td>
-      <td>${e.wod || ""}</td>
-      <td>${e.tipo || ""}</td>
-      <td>${e.resultado || ""}</td>
-      <td style="text-align:left; white-space:normal;">${e.notas || ""}</td>
-    `;
-    diaryBody.appendChild(tr);
-  });
-}
-
-// ================= TABS =================
-document.querySelectorAll(".tab-btn").forEach(btn => {
-  btn.addEventListener("click", () => {
-    document.querySelectorAll(".tab-btn").forEach(b => b.classList.remove("active"));
-    document.querySelectorAll(".section").forEach(s => s.classList.remove("active"));
-
-    btn.classList.add("active");
-    const target = btn.getAttribute("data-target");
-    document.getElementById(target).classList.add("active");
-  });
-});
-
-// INIT
-initSelect();
-renderRm();
 renderDiary();
 
-if (!dateEl.value) {
-  const today = new Date().toISOString().slice(0, 10);
-  dateEl.value = today;
-}
+/* ===== TABS ===== */
+const tabs = document.querySelectorAll(".tab-btn");
+tabs.forEach(btn => {
+  btn.onclick = () => {
+    tabs.forEach(b => b.classList.remove("active"));
+    btn.classList.add("active");
+
+    document.querySelectorAll(".section").forEach(s => s.classList.remove("active"));
+    document.getElementById(btn.dataset.target).classList.add("active");
+  };
+});
 </script>
 
 </body>
