--- a/index.html
+++ b/index.html
@@ -532,7 +532,16 @@ if (!dateEl.value) {
 </script>
 
 </body>
+  <script>
+if ("serviceWorker" in navigator) {
+  navigator.serviceWorker.register("service-worker.js")
+    .then(() => console.log("SW registado"))
+    .catch(err => console.log("Erro SW:", err));
+}
+</script>
+
 </html>
+
 
 
 
