--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     .section { display: none; }
     .section.active { display: block; }
 
-    /* Botão de apagar nas tabelas (pequeno) */
+    /* Botão de apagar na tabela 1RM (pequeno) */
     .btn-delete {
       padding: 4px 8px;
       border-radius: 999px;
@@ -238,6 +238,7 @@
             <tr>
               <th>Exercício</th>
               <th>1RM</th>
+              <th>25%</th>
               <th>50%</th>
               <th>60%</th>
               <th>70%</th>
@@ -291,6 +292,7 @@
 
       <div style="margin-top:8px;">
         <button class="btn-primary" id="saveDiary">Guardar</button>
+        <button class="btn-danger" id="clearDiary">Apagar tudo</button>
       </div>
 
     </div>
@@ -305,7 +307,6 @@
               <th>Tipo</th>
               <th>Resultado</th>
               <th>Notas</th>
-              <th></th> <!-- botão apagar linha -->
             </tr>
           </thead>
           <tbody id="diaryBody"></tbody>
@@ -357,7 +358,9 @@ const MOVES = [
   "Kettlebell Lunges"
 ];
 
-const PERC = [0.5,0.6,0.7,0.75,0.8,0.85,0.9,0.95];
+/* agora com 25% incluído */
+const PERC = [0.25, 0.5, 0.6, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95];
+
 const STORAGE_RM = "crossfit_1rm";
 let dataRm = JSON.parse(localStorage.getItem(STORAGE_RM) || "{}");
 
@@ -450,7 +453,7 @@ const diaryBody = document.getElementById("diaryBody");
 
 function renderDiary() {
   diaryBody.innerHTML = "";
-  diary.forEach((d, index) => {
+  diary.forEach(d => {
     const tr = document.createElement("tr");
 
     const tdDate = document.createElement("td");
@@ -472,20 +475,6 @@ function renderDiary() {
     const tdNotas = document.createElement("td");
     tdNotas.textContent = d.notas || "";
     tr.appendChild(tdNotas);
-
-    const tdDelete = document.createElement("td");
-    const btn = document.createElement("button");
-    btn.textContent = "🗑";
-    btn.className = "btn-delete";
-    btn.addEventListener("click", (e) => {
-      e.stopPropagation();
-      if (!confirm("Apagar este registo do diário?")) return;
-      diary.splice(index, 1);
-      localStorage.setItem(STORAGE_DIARY, JSON.stringify(diary));
-      renderDiary();
-    });
-    tdDelete.appendChild(btn);
-    tr.appendChild(tdDelete);
 
     diaryBody.appendChild(tr);
   });
@@ -511,6 +500,15 @@ document.getElementById("saveDiary").addEventListener("click", () => {
   tipoEl.value = "";
   resEl.value = "";
   notasEl.value = "";
+});
+
+/* apagar TODO o diário */
+document.getElementById("clearDiary").addEventListener("click", () => {
+  if (!diary.length) return;
+  if (!confirm("Apagar todos os registos do diário?")) return;
+  diary = [];
+  localStorage.setItem(STORAGE_DIARY, JSON.stringify(diary));
+  renderDiary();
 });
 
 /* ===== TABS ===== */
